@@ -1,3 +1,7 @@
+2010-06-18  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #14705: In BE login form labels are to small (for German BE-Language)
+
 2010-06-18  Benjamin Mack  <benni@typo3.org>
 
 	* Followup to #14733: Improvements to Backend skin - Added updated styles for the taskcenter module
